amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/duplicate-extension-interface.federation.report
ModelId: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/duplicate-extension-interface.graphql
Profile: GraphQL
Conforms: false
Number of results: 1

Level: Violation

- Constraint: http://a.ml/vocabularies/amf/parser#duplicated-declaration
  Message: Cannot exist two or more types with name 'Person'
  Severity: Violation
  Target: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/duplicate-extension-interface.graphql#/declares/shape/Person
  Property: 
  Range: [(9,0)-(11,1)]
  Location: 
